--- a/bc2403-sb/demo-sb-restful/src/main/resources/application.yml
+++ b/bc2403-sb/demo-sb-restful/src/main/resources/application.yml
@@ -7,3 +7,19 @@ api:
     endpoints:
       users: '/users'
       posts: '/posts'
+      albums: '/albums'
+
+database: 
+  db-name: "db_2403"
+
+spring:
+  datasource:
+    driverClassName: "org.postgresql.Driver"
+    url: "jdbc:postgresql://localhost:5432/${database.db-name}"
+    username: "postgres"
+    password: "admin1234"
+
+spring.jpa:
+  show-sql: true
+  hibernate.ddl-auto: update # update
+  # Hibernate ddl auto (create, create-drop, validate, update)
